<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<LinearLayout
	  android:id="@+id/geral"
	  android:orientation="vertical"
	  android:layout_width="match_parent"
	  android:layout_height="match_parent">
	  
	    <TextView android:text="@string/escolhaMeses"
	  			android:textSize="14dip"
	  			android:id="@+id/escolhaMesesid"
	  			android:layout_width="fill_parent"
	        	android:layout_height="fill_parent"
	        	android:gravity="center"
	  			android:layout_marginBottom="2dp"
	  			android:layout_marginTop="20dp"
	  			android:textAlignment="gravity"
	  			android:textColor="@android:color/holo_orange_dark"/>
	    
	      <View	android:id="@+id/secondtDivider"
	        	android:layout_height="1dp"
	        	android:layout_marginTop="15dp"
	        	android:layout_width="fill_parent"
	        	android:layout_marginLeft="28dp"
	        	android:layout_marginRight="28dp"
	        	android:background="#C8C8C8" />
	      
		<!-- DropDown de Meses -->    
	    <Spinner
	        	android:id="@+id/dropdownMeses"
	        	android:layout_width="fill_parent"
	  			android:layout_height="wrap_content"
	  			android:layout_marginLeft="40dp"
	  			android:layout_marginTop="10dp"
	  			android:layout_marginRight="40dp"
	  			android:entries="@array/itensmeses"
	  			android:prompt="@string/Meses"
	  	/>
	    
	     <View	android:id="@+id/threeDivider"
	        	android:layout_height="1dp"
	        	android:layout_marginTop="8dp"
	        	android:layout_width="fill_parent"
	        	android:layout_marginLeft="28dp"
	        	android:layout_marginRight="28dp"
	        	android:background="#C8C8C8" />
	  
	  <TextView android:text="@string/receitasFirstPage"
	  			android:textSize="18dip"
	  			android:id="@+id/receitasId"
	  			android:layout_marginTop="12dp"
	  			android:layout_width="fill_parent"
	  			android:layout_height="fill_parent"
	  			android:gravity="center"
	  			android:textColor="@android:color/holo_green_light"/>
	  
	    <TextView android:text="@string/despesasFirstPage"
	  			android:textSize="18dip"
	  			android:id="@+id/despesasId"
				android:layout_width="fill_parent"
	  			android:layout_height="fill_parent"
	  			android:gravity="center"
	  			android:layout_marginBottom="2dp"
	  			android:layout_marginTop="10dp"
	  			android:textColor="@android:color/holo_red_light"/>
	    
	    <View	android:id="@+id/firstDivider"
	        	android:layout_height="1dp"
	        	android:layout_marginTop="8dp"
	        	android:layout_width="fill_parent"
	        	android:layout_marginLeft="50dp"
	        	android:layout_marginRight="60dp"
	        	android:background="#C8C8C8" />
	    
	    <TextView android:text="@string/situacaoAtual"
	  			android:textSize="18dip"
	  			android:id="@+id/situacaoAtualid"
	  			android:textStyle="bold" 
	  			android:layout_marginTop="10dp"
	  			android:layout_width="fill_parent"
	  			android:layout_height="fill_parent"
	  			android:gravity="center"
	  			android:textColor="@android:color/holo_green_dark"/>
	    
	    <TextView android:text="@string/saldoAtual"
	  			android:textSize="18dip"
	  			android:id="@+id/saldoid"
	  			android:textStyle="bold" 
	  			android:layout_marginTop="10dp"
	  			android:layout_width="fill_parent"
	  			android:layout_height="fill_parent"
	  			android:gravity="center"
	  			android:textColor="@android:color/holo_green_dark"/>
	    
	    <TextView
	        android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:gravity="center"
	        android:layout_marginTop="17dp"
	        android:text="@string/AcompanhamentoGrafico"
	        android:textAlignment="center"
	        android:textColor="@android:color/holo_orange_dark"
	        android:textSize="17dip"
	        android:id="@+id/acompanhemtoGraficoId" />
	    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:gravity="center"
	        android:text="Não há transações para o mês escolhido"
	        android:textAlignment="center"
	        android:textColor="@android:color/holo_orange_dark"
	        android:textSize="16dip"
	        android:visibility="invisible"
	        android:id="@+id/validacaoExisteTransacao" />
        	
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart1"
        android:layout_width="fill_parent"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="13dp"
       	android:layout_marginRight="13dp"
       	android:layout_marginBottom="15dp"
        android:layout_height="250dp" />	
	</LinearLayout>
</ScrollView>